m450-Application-Testing/07_deployment-environment/demo-app/setup/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    app: demo-app
